welcome.lessons.welcome.bat.bool2.AlarmClock.scala.code
def alarmClock(day:Int, vacation:Boolean): String = {
	if (vacation == false){
		if (day == 0 || day == 6){
			return "10:00"
		}
		return "7:00"
	}
	if (vacation == true){
		if (day == 0 || day == 6){
			return "off"
		}
		return "10:00"
	}
	
}
